# launches

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.example.json  docker-compose.yml  launches_test.html  pyproject.toml
.github/workflows/: python-app.yml
launches/: __init__.py  __main__.py  cache.py  cli.py  config.py  errors.py  launches.py  ll2.py
launches/notifications/: handlers.py  renderers.py  services.py  templates.py
launches/notifications/services/: __init__.py  gmail.py  protocol.py  smtp_email.py  stdout.py
launches/templates/: launches.j2.html  launches.j2.txt  subject.j2
tests/: conftest.py  test_cache.py  test_config.py  test_launches.py  test_ll2.py  test_notifiation_handlers.py  test_notification_handlers.py  test_notification_renderers.py  test_notification_services.py  test_notification_templates.py
tests/resources/: single_launch.json  two_launches.json
