[project]
name = "launches"
version = "0.5.0"
description = "A tool which checks for upcoming space launches using the space launch library 2 (LL2) API and can send notifications if upcoming launches are found."
authors = [{ name = "Scott Cummings" }]
license = "Apache-2.0 OR MIT"
dependencies = [
    "jinja2>=3.1.4",
    "requests>=2.32.3",
    "pytz>=2024.1",
    "schedule>=1.2.2",
    "loguru>=0.7.2",
    "pydantic>=2.7.4",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
launches = "launches.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.0",
    "freezegun>=1.5.1",
    "pytest-cov>=5.0.0",
    "types-pytz>=2024.1.0.20240417",
    "types-requests>=2.32.0.20240602",
    "ruff>=0.4.9",
    "pre-commit>=3.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["launches"]

[tool.mypy]
files = "launches, tests"
mypy_path = "launches"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Enforce pyflakes(F), pycodestyle(E, W), isort (I), bugbears (B), and pep8-naming (N) rules.
select = ["F", "E", "W", "I", "B", "N", "RET"]
